# rust-website

./: .env  .gitignore  Cargo.toml  Docker.Jenkinsfile  Dockerfile  Jenkinsfile  README.md  create_links_windows.bat  docker.txt  entrypoint.sh
entities/: Cargo.toml
entities/src/: businessarea.rs  client.rs  common.rs  lib.rs  person.rs  project.rs  project_businessarea.rs  project_client.rs  project_person.rs  project_role.rs  project_technology.rs  projectlist.rs  role.rs  technology.rs
form_entities/: Cargo.toml
form_entities/src/: entities.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230228_000001_initial_db.rs
services/: Cargo.toml
services/src/: businessareaservice.rs  clientservice.rs  lib.rs  personservice.rs  projectlistservice.rs  projectservice.rs  roleservice.rs  technologyservice.rs
src/: config.rs  database.rs  main.rs  project_routes.rs  routes.rs
static/css/: page.css
static/scripts/: bootstrap.bundle.js  page.js  page_pretty.js
templates/tera/: aboutMe.html.tera  aboutPage.html.tera  base.html.tera  contact.html.tera  css.html.tera  hobbies.html.tera  index.html.tera  legalInfo.html.tera  privateprojects.html.tera  projects.html.tera  scripts.html.tera  skills.html.tera
