[package]
name = "rustwebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
dotenvy = "0.15.6"
config = "0.13.1"
actix-files = "0.6.2"
actix-web = "4"
env_logger = "0.10.0"
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"]}
sea-orm-migration = "0.11.0"
sqlx = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tera = "1.17.1"
entities = { path = "entities"}
services ={ path = "services"}
migration ={ path = "migration"}
