[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"]}
strum_macros = "0.24.3"
