[package]
name = "services"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "services"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros", "debug-print"]}
entities = { path = "../entities" }
form_entities ={ path = "../form_entities"}
log = "0.4.0"
env_logger = "0.10.0"